--- a/src/application/components/UIHeader/UIHeader.scss
+++ b/src/application/components/UIHeader/UIHeader.scss
@@ -1,30 +1,15 @@
-
-.ui-header__logo {
-  height: 42px;
-  width: auto;
-  display: block;
-  object-fit: contain;
-}
-
-.ui-header__hashtag { 
-  font-size: 1.1rem;
-  font-weight: 500;
-  margin: 0;
-}
 .ui-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--color-primary);
-  border-bottom: 2px solid #960fe4;
-  padding: 0.8rem 2.5rem;
-  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
+  padding: 0.5rem 2.5rem;
   position: sticky;
   top: 0;
   z-index: 100;
 
   &__logo {
-    height: 60px;
+    height: 48px;
     transition: transform 0.3s ease;
 
     &:hover {
@@ -41,7 +26,7 @@
   &__link {
     font-size: 1rem;
     font-weight: 600;
-    color: #0d92df;
+    color: var(--color-background);
     cursor: pointer;
     position: relative;
     transition: all 0.3s ease;
@@ -59,7 +44,7 @@
       bottom: -6px;
       width: 0%;
       height: 2px;
-      background-color: #fdfcfc;
+      background-color: var(--color-background);
       transition: width 0.3s ease;
     }
 
@@ -70,7 +55,7 @@
 
   &__hashtag {
     font-size: 1rem;
-    color: #c97e46;
+    color: var(--color-background);
     font-weight: 700;
     letter-spacing: 0.5px;
   }
