fix: theater schedule detail

--- a/src/application/pages/TheaterDetail/TheaterDetail.scss
+++ b/src/application/pages/TheaterDetail/TheaterDetail.scss
@@ -93,6 +93,12 @@
   font-weight: 700;
 }
 
+.member-tag.birthday {
+  background-color: #ffe6a7;
+  color: #b45309;
+  font-weight: 700;
+}
+
 /* ===== LINK BUTTON ===== */
 .theater-link {
   color: var(--color-accent);
